Reports for Smart in HUB 3.0 ( Redmine Ticket #271)
Description :
Need Smart Reports for HUB 3.0

Fix:
Configuration Changes for DBCopyTool and RTScheduler to run on hub 3.0

Testing:
Run DBCopy Tool and then RTScheduler

--- a/reportModule/pom.xml
+++ b/reportModule/pom.xml
@@ -18,8 +18,8 @@
 	<url>http://www.mfino.com</url>
 
 	<modules>
-	<!--	<module>DbCopyTool</module>
-		<module>saiku</module> -->
+	<module>DbCopyTool</module>
+		<!--<module>saiku</module> -->
 		<module>RTScheduler</module>		
 	</modules>
 </project>
