1. Handling negative cases for VACashin in Inquiry for SubscriberMDN, Pocket etc. Will throw the error code as 76

--- a/Smart/VAISO8583/pom.xml
+++ b/Smart/VAISO8583/pom.xml
@@ -47,6 +47,12 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.mfino.commons</groupId>
+			<artifactId>TransactionApi</artifactId>
+			<version>${project.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.mfino.mce</groupId>
 			<artifactId>ISODefinitions</artifactId>
 			<version>${project.version}</version>
