--- a/Mock/pom.xml
+++ b/Mock/pom.xml
@@ -24,6 +24,7 @@
     <module>ISO8583Mock</module>
  
 		<module>ArtajasasSimulator_Maven_project</module>
-	 -->      
+	 -->     
+	 <module>SmartMocks</module> 
 	</modules>
 </project>
