Reverting the file committed by Amar as these are not necessary.

--- a/Web/pom.xml
+++ b/Web/pom.xml
@@ -20,7 +20,7 @@
 	<modules>
 		<module>AdminApplication</module>
 		<!-- <module>TransactionMonitorTool</module> -->
-		<module>Scheduler</module>
+		<!-- <module>Scheduler</module> -->
 		<!-- <module>ReportScheduler</module> -->
 		<module>webapi</module>
 		<!-- <module>SMSAlerts</module> -->
