--- a/Core/settings/hub/mfino.properties
+++ b/Core/settings/hub/mfino.properties
@@ -143,6 +143,6 @@ mfino.kycupgrade.email.message=success
 mfino.currency.format.locale=in
 mfino.requires.successful.transactions.in.emoney.history=false
 mfino.pdf.history.footer=\u00a9 2013 PT Smartfren Telecom. All Rights reserved
-mfino.email.pdf.history.subject=Smartfren Uangku Electronic Statement from $(FromDate) to $(ToDate)
-mfino.email.pdf.history.body=Thank you for using Uangku E-Statements Services. Please find your requested Uangku Transaction History for your selected time period.   Enter your Uangku PIN to view the document.
+mfino.email.pdf.history.subject=Dimo Electronic Statement from $(FromDate) to $(ToDate)
+mfino.email.pdf.history.body=Thank you for using Dimo E-Statements Services. Please find your requested Dimo Transaction History for your selected time period.   Enter your Dimo PIN to view the document.
 mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
