--- a/reportModule/RTScheduler/pom.xml
+++ b/reportModule/RTScheduler/pom.xml
@@ -42,6 +42,11 @@
 		    <version>1.8</version>
 		</dependency>
 		<dependency>
+ 			<groupId>cglib</groupId>
+ 			<artifactId>cglib</artifactId>
+ 			<version>2.2</version>
+		</dependency>		
+		<dependency>
 
 	   <groupId>net.bull.javamelody</groupId>
 			<artifactId>javamelody-core</artifactId>
