Created two new reports viz. Subscriber Report-Basic & Subscriber Report-Detailed.prpt Also added header and footer messages to these reports and externalized few parameters like footerMessage, ReportDescription, ReportType. Added new jars(string Encrytor and Decryptor) to RTSchdeuler to decrypt the data from the db while generating the report. Plz check my mail for details on how to install them on maven.

--- a/Core/settings/hub/mfino.properties
+++ b/Core/settings/hub/mfino.properties
@@ -142,7 +142,8 @@ mfino.kycupgrade.email.message=success
 #in for indonesia format, us for general format
 mfino.currency.format.locale=in
 mfino.requires.successful.transactions.in.emoney.history=false
-mfino.pdf.history.footer=\u00a9 2013 PT Smartfren Telecom. All Rights reserved
+mfino.pdf.history.footer=\u00a9 2013 PT Dimo Telecom. All Rights reserved
 mfino.email.pdf.history.subject=Dimo Electronic Statement from $(FromDate) to $(ToDate)
 mfino.email.pdf.history.body=Thank you for using Dimo E-Statements Services. Please find your requested Dimo Transaction History for your selected time period.   Enter your Dimo PIN to view the document.
 mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
+mfino.report.footer=\u00a9 2013 PT Dimo Telecom. All Rights reserved
