--- a/Core/settings/smart/mfino.properties
+++ b/Core/settings/smart/mfino.properties
@@ -146,3 +146,4 @@ mfino.pdf.history.footer=\u00a9 2013 PT Smartfren Telecom. All Rights reserved
 mfino.email.pdf.history.subject=Smartfren Uangku Electronic Statement from $(FromDate) to $(ToDate)
 mfino.email.pdf.history.body=Thank you for using Uangku E-Statements Services. Please find your requested Uangku Transaction History for your selected time period.   Enter your Uangku PIN to view the document.
 mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
+mfino.report.footer=\u00a9 2013 PT Smartfren Telecom. All Rights reserved
