--- a/reportModule/RTScheduler/pom.xml
+++ b/reportModule/RTScheduler/pom.xml
@@ -295,6 +295,16 @@
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>3.3.2.GA</version>
 		</dependency>
+		<dependency>
+			<groupId>pentaho-library</groupId>
+			<artifactId>decryptfunction</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.mfino</groupId>
+			<artifactId>decryptfunction</artifactId>
+			<version>1.0</version>
+		</dependency>
     </dependencies>
 	
 	<build>
