--- a/reportModule/RTScheduler/web/WEB-INF/web.xml
+++ b/reportModule/RTScheduler/web/WEB-INF/web.xml
@@ -13,7 +13,15 @@
     	<env-entry-type>java.lang.String</env-entry-type> 
     	<env-entry-value>java:/comp/env/mfino.RTScheduler.databaseConfig.Properties</env-entry-value> 
 	</env-entry>
-	
+	<env-entry> 
+		<description>
+		environment variable for setting the war type to be used in the java code
+		(ConfigurationUtil) to use the corresponding properties file.
+		</description>
+    	<env-entry-name>mfino.Properties</env-entry-name>
+    	<env-entry-type>java.lang.String</env-entry-type> 
+    	<env-entry-value>RTScheduler</env-entry-value> 
+	</env-entry>	
    <context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
