Modified to 1. Add new parameter favorite code in favorites. 2. New category files for postpaid pln, phone and prepaid pln, phone

--- a/Web/webapi/pom.xml
+++ b/Web/webapi/pom.xml
@@ -107,8 +107,12 @@
 									<includes>
 										<include>spring-datasource-beans.xml</include>
 										<include>category.bankCodes.txt</include>
-										<include>category.purchase.txt</include>
-										<include>category.payments.txt</include>
+										<include>category.postpaid.txt</include>
+										<include>category.prepaid.txt</include>
+										<include>category.postpaidPhone.txt</include>
+										<include>category.prepaidPhone.txt</include>
+										<include>category.postpaidPLN.txt</include>
+										<include>category.prepaidPLN.txt</include>
 										<include>defaultJson.txt</include>
 										<include>errorJson.txt</include>
 									</includes>
