Flashiz QRPayment For DIMO
Description :  Integration Backend for QR Flashiz for DIMO

Handlers,Scripts,ISO layer,jsp pages, QRPayment integration and necessary configurations are checked in

Testing : Tested end to end by connecting to middleware

Reviewed by Bala

--- a/MfinoCoreEngine/mfino_conf/bc2qmap.cfg
+++ b/MfinoCoreEngine/mfino_conf/bc2qmap.cfg
@@ -1,2 +1,3 @@
-153=jms:gtISOQueue?disableReplyTo=true
+153=jms:bsmISOQueue?disableReplyTo=true
 881=jms:zteISOQueue?disableReplyTo=true
+9995=jms:flashizISOQueue?disableReplyTo=true
