--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -26,6 +26,8 @@
 		<module>HubConfiguration</module>
 		<module>HubMocks</module>
 		<module>HubXMLRPC</module>
+		<module>FlashizISO8583</module>
+		<module>FlashizBillPayment</module>
 		<!--<module>XMLRPCDefinitions</module>-->
     </modules>	
 	
