Modified to Add Subscriber status transaction for Uangku And category.help for displaying the help menu in mobile app

--- a/Web/webapi/pom.xml
+++ b/Web/webapi/pom.xml
@@ -115,6 +115,7 @@
 										<include>category.prepaidPLN.txt</include>
 										<include>defaultJson.txt</include>
 										<include>errorJson.txt</include>
+										<include>category.help.txt</include>
 									</includes>
 									<filtering>true</filtering>
 								</resource>
