--- a/Core/settings/hub/mfino.properties
+++ b/Core/settings/hub/mfino.properties
@@ -147,3 +147,4 @@ mfino.email.pdf.history.subject=Dimo Electronic Statement from $(FromDate) to $(
 mfino.email.pdf.history.body=Thank you for using Dimo E-Statements Services. Please find your requested Dimo Transaction History for your selected time period.   Enter your Dimo PIN to view the document.
 mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
 mfino.report.footer=\u00a9 2013 PT Dimo Telecom. All Rights reserved
+promo.image.path=images/promoImage.png
