https://project.dimo.co.id/issues/362 Bayar.Net BillPayments module 1. Updated mFinoFixml with required tags 2. Handlers - updated to handle new tags and pass to next modules 3. bayar_billpay_configuration.xml - flow for bayar.net bill payments 4. BayarBillPayments - Includes communication and processing modules for bayar.net bill payments

--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -25,7 +25,7 @@
 	<modules>
 		<module>HubConfiguration</module>
 		<module>HubMocks</module>
-		<module>HubXMLRPC</module>
+		<module>BayarBillPayments</module>
 		<module>FlashizISO8583</module>
 		<module>FlashizBillPayment</module>
 		<!--<module>XMLRPCDefinitions</module>-->
