--- a/Hub/BayarBillPayments/pom.xml
+++ b/Hub/BayarBillPayments/pom.xml
@@ -92,6 +92,11 @@
 			<artifactId>BillPayments</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20090211</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
