--- a/Hub/BayarBillPayments/pom.xml
+++ b/Hub/BayarBillPayments/pom.xml
@@ -68,26 +68,6 @@
 		  <version>3.0.5.RELEASE</version>
 		</dependency>
 		<dependency>
-	      <groupId>org.apache.xmlrpc</groupId>
-	      <artifactId>xmlrpc-client</artifactId>
-	      <version>3.1.3</version>
-	    </dependency>
-	    <dependency>
-	      <groupId>org.apache.xmlrpc</groupId>
-	      <artifactId>xmlrpc-server</artifactId>
-	      <version>3.1.3</version>
-	    </dependency>
-	    <dependency>
-	      <groupId>org.apache.xmlrpc</groupId>
-	      <artifactId>xmlrpc-common</artifactId>
-	      <version>3.1.3</version>
-	    </dependency>
-	    <dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
 			<groupId>com.mfino.application</groupId>
 			<artifactId>BillPayments</artifactId>
 			<version>0.1-SNAPSHOT</version>
@@ -113,8 +93,7 @@
 						<Buildtime>${buildtime}</Buildtime>
 						<Release>${release}</Release>
 						<Revision>${revision}</Revision>
-						<Import-Package>org.apache.xmlrpc.*,
-							org.apache.ws.commons.*,org.apache.activemq.xbean,
+						<Import-Package>org.apache.activemq.xbean,
                             org.apache.activemq.spring,
                             org.apache.activemq.broker,
                             org.apache.activemq.security,
@@ -132,7 +111,7 @@
 							org.hibernate.jdbc,
               				org.hibernate.*,*	;
 						</Import-Package>
-						<Export-Package>com.mfino.hub.xmlrpc.*,org.apache.xmlrpc.*,org.apache.ws.commons.*</Export-Package>
+						<Export-Package>com.mfino.bayar.*</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
