Modified the properties files and category files as requested by Uangku UAT.

--- a/Core/settings/hub/mfino.properties
+++ b/Core/settings/hub/mfino.properties
@@ -148,3 +148,4 @@ mfino.email.pdf.history.body=Thank you for using Dimo E-Statements Services. Ple
 mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
 mfino.report.footer=\u00a9 2013 PT Dimo Telecom. All Rights reserved
 promo.image.path=images/promoImage.png
+mfino.transaction.datetime.format=dd/MM/yy HH:mm
