Modified to 1. add category address json file for displaying the gallery agents details in help. 2. Added new help content for cash out 3. Added description filed to transfer. 4. Fixed the Stale data exception during charge distribution.

--- a/Web/webapi/pom.xml
+++ b/Web/webapi/pom.xml
@@ -116,6 +116,7 @@
 										<include>defaultJson.txt</include>
 										<include>errorJson.txt</include>
 										<include>category.help.txt</include>
+										<include>category.addressList.txt</include>
 									</includes>
 									<filtering>true</filtering>
 								</resource>
