--- a/Web/webapi/pom.xml
+++ b/Web/webapi/pom.xml
@@ -116,7 +116,8 @@
 										<include>defaultJson.txt</include>
 										<include>errorJson.txt</include>
 										<include>category.help.txt</include>
-										<include>category.addressList.txt</include>
+										<include>category.upgradeAddressList.txt</include>
+										<include>category.cashoutAddressList.txt</include>
 									</includes>
 									<filtering>true</filtering>
 								</resource>
