Modified the mfino.properties and kyc_txn_list.json files

--- a/Core/settings/smart/mfino.properties
+++ b/Core/settings/smart/mfino.properties
@@ -144,7 +144,7 @@ mfino.currency.format.locale=in
 mfino.requires.successful.transactions.in.emoney.history=false
 mfino.pdf.history.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights reserved
 mfino.email.pdf.history.subject=Smartfren Uangku Electronic Statement from $(FromDate) to $(ToDate)
-mfino.email.pdf.history.body=Thank you for using Uangku E-Statements Services. Please find your requested Uangku Transaction History for your selected time period. Enter your Uangku PIN to view the document.
+mfino.email.pdf.history.body=Terima kasih Anda telah menggunakan Uangku. Terlampir dokumen riwayat transaksi yang Anda minta. Gunakan PIN Uangku Anda untuk membuka dokumen ini. Pastikan Anda memiliki program Adobe Acrobat Reader minimal versi 6.0 pada komputer atau handphone Anda.
 mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
 mfino.report.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights reserved
 promo.image.path=images/promoImage.png
