new report module: Moved scheduler properties to mfino.properties that's in mfino_conf folder in tomcat. Also moved database_config.properties to mfino_conf folder

--- a/Core/settings/hub/mfino.properties
+++ b/Core/settings/hub/mfino.properties
@@ -149,3 +149,9 @@ mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
 mfino.report.footer=\u00a9 2013 PT Dimo Telecom. All Rights reserved
 promo.image.path=images/promoImage.png
 mfino.transaction.datetime.format=dd/MM/yy HH:mm
+#Below properties are used by Report module
+reportsInputDir=/home/mfinance/mfino_install/tomcat/Reports/WEB-INF/resources/reports
+scheduledReportsOutputDir=/home/mfinance/mfino_install/reports/dailyReports
+#otherReportsOutputDir=/home/mfinance/mfino_install/reports
+common.report.properties.filepath=/home/mfinance/mfino_install/tomcat/Reports/WEB-INF/classes/CommonReportProperties.json
+email.recipient.list=test@rand-ind.com
