https://project.dimo.co.id/issues/362
1. Changes notifications for Airtime Purchase for bayar
2. Moved configurations from mce_bayar_billpay_configuration.xml to mce.properties

--- a/MfinoCoreEngine/mfino_conf/mce.properties
+++ b/MfinoCoreEngine/mfino_conf/mce.properties
@@ -310,3 +310,11 @@ hsm.thales.encrypted.component2=UCCCF7EB7945F9989CB88A78F88030A0F
 hsm.thales.encrypted.component3=U6506A69C3833C8CE9B48030EE38D89FC
 hsm.thales.keytype=000
 hsm.thales.keyschemelmk=U
+
+#Bayar Web service
+bayar_bank_web_service_url=https://202.51.252.110/demo/h2h/
+bayar_https_timeout=30000
+bayar_partner_id=smartfren
+bayar_api_key=1D02640903DF5E9126EDB9FC46C6FB70
+bayar_output=json
+
