--- a/Core/settings/smart/mfino.properties
+++ b/Core/settings/smart/mfino.properties
@@ -155,3 +155,4 @@ scheduledReportsOutputDir=/home/mfinance/mfino_install/reports/dailyReports
 #otherReportsOutputDir=/home/mfinance/mfino_install/reports
 common.report.properties.filepath=/home/mfinance/mfino_install/tomcat/Reports/WEB-INF/classes/CommonReportProperties.json
 email.recipient.list=test@rand-ind.com
+dateFormatInReportFileNames=yyyyMMdd
