--- a/MfinoCoreEngine/mfino_conf/mce.properties
+++ b/MfinoCoreEngine/mfino_conf/mce.properties
@@ -317,4 +317,5 @@ bayar_https_timeout=30000
 bayar_partner_id=smartfren
 bayar_api_key=1D02640903DF5E9126EDB9FC46C6FB70
 bayar_output=json
-
+#Notation for Timer 1h5m5s  (h for hour, m for minute, s for second)
+bayar_txn_pending_clear_timer=1h
