Modified the category files and mfino.properties, mce.properties, quartz.properties and reportScheduler.properties from Uangku Production server

--- a/Core/settings/smart/mfino.properties
+++ b/Core/settings/smart/mfino.properties
@@ -27,12 +27,12 @@ mfino.datapush.username=zsmart
 mfino.datapush.password=zsmart123
 mfino.lop.expiry.days=1
 mfino.lop.timezone.id=Asia/Jakarta
-mfino.mail.server=mfinomailserver
-mfino.mail.server.auth_name=m-commerce.admin@mcomm.smart-telecom.co.id
-mfino.mail.server.auth_password=
-mfino.mail.server.from_name=M-Commerce System
-mfino.mail.server.port=25
-mfino.mail.server.require_auth=false
+mfino.mail.server=mail.uangku.co.id
+mfino.mail.server.auth_name=statement@uangku.co.id
+mfino.mail.server.auth_password=uangkusf
+mfino.mail.server.from_name=statement@uangku.co.id
+mfino.mail.server.port=587
+mfino.mail.server.require_auth=true
 mfino.mail.server.require_ssl=false
 mfino.merchant_default_pocket_template_id=3
 mfino.multix.password=password
@@ -40,23 +40,25 @@ mfino.multix.username=username
 mfino.notification.var.CustomerServiceShortCode=881
 mfino.pin_length=6
 mfino.upload_file_size_limit=5
-mfino.application.url=https://10.16.105.6:8443/AdminApplication
 mfino.merchant.add.email.subject=M-Commerce System Advisories
 mfino.user.add.email.subject=M-Commerce System Advisories
 mfino.user.reset_password.email.subject=M-Commerce System Advisories
 mfino.email.signature=M-Commerce System Admin
 mfino.email.additional.message=
 temp.dir=
-mfino.log.root.path=/var/log/mfino/
-mfino.sms.gateway.url=http://localhost:6013/cgi-bin/sendsms
-mfino.sms.gateway.username=Smart
-mfino.sms.gateway.password=Smart2010
+mfino.log.root.path=/var/log/rand/
+#mfino.sms.gateway.url=http://localhost:6013/cgi-bin/sendsms
+mfino.sms.gateway.url=http://10.16.105.10:8082/cgi-bin/sendsms
+mfino.sms.gateway.username=
+mfino.sms.gateway.password=
+#mfino.sms.gateway.username=Smart
+#mfino.sms.gateway.password=Smart2010
 mfino.marketing_category.max_value=69
 mfino.mail.default_subject=M-Commerce System Notification
 mfino.h2hmerchant.smart.parent.username=H2H_STD
 mfino.h2hmerchant.mobile8.parent.username=
-mfino.creditcard_payment.registration_expiration_time_in_hrs=24
 mfino.subscriber.register.email.subject=mWallet System Advisories
+mfino.creditcard_payment.registration_expiration_time_in_hrs=24
 mfino.register_subscriber.email.standard_body=Yang terhormat Bapak atau Ibu,  \n\n Dear Customer, \nAnda menerima email ini secara otomatis karena untuk memvalidasi email address yang digunakan untuk registrasi user baru pada SMARTFREN Website. \n\n This email is sent automatically to validate email address use for new user id registration at our SMARTFREN Website. \n\nJika Anda bukan pemilik email ini, maka silahkan kirim balik email ini dengan mem-forward email ini ke customer service kami ke registration.service@smart-telecom.co.id karena seseorang mungkin salah mendaftarkan email anda. \n\nIf you are not the owner of this email address then please disregard this email or forward this email to our customer service at registration.service@smart-telecom.co.id as someone has possibly wrongly registered with your email address.\n\n
 mfino.register_subscriber.email.code_body=Untuk mengkonfimasikan email address, silakan klik $(autoConfirmationURL)?confirmationCode=$(confirmationCode)&username=$(userName), ketik $(confirmationURL) (halaman konfirmasi) dan input $(confirmationCode) (scramble code) pada kode konfirmasi untuk mengkonfirmasikan email adress anda. \n\nTo confirm your email address, please kindly click $(autoConfirmationURL)?confirmationCode=$(confirmationCode)&username=$(userName). Or go to $(confirmationURL) and input $(confirmationCode) on the confirmation code in the form to confirm your email address.\n\n
 mfino.register_subscriber.email.additional_msg=Setelah konfirmasi selesai, petugas kami akan menghubungi anda via telephone dan mengkonfirmasikan pendaftaran anda.\n \nOnce you have completed the above confirmation required, our representative will contact you via phone and confirm your registration accordingly.\n\n
@@ -117,42 +119,51 @@ mfino.bulkupload.default.currency=IDR
 mfino.bulkupload.default.timezone=Asia/Jakarta
 mfino.intial.kyclevel=1
 mfino.countrycode=62
+mfino.otpexpirationtime=24
+mfino.otpmail.subject=OTP mail
+mfino.application.url=https://uangku.smartfren.com/AdminApplication
 mfino.allow.user.concurrent.logins=false
 report.productname=eMoney
 mfino.otp.onintialized=false
 mfino.olap.url=https://10.16.105.6:8443/analytics
-mfino.report.url=http://localhost:8080/ReportScheduler
+mfino.report.url=http://localhost:8080/Reports
 mfino.report.directory=/home/mfinance/mfino_install/reports
 mfino.openoffice.port=8100
+mfino.bulktransfer.approver.notify.subject=Bulk Transfer Request
+mfino.bulktransfer.approver.notify.message=Bulk Transfer Request for approval
+mfino.allow.user.concurrent.logins=false
+report.productname=UangkuDimo
 mfino.emoney.pocket.required=true
 mfino.include.partner.slc=false
-mfino.netting.ledger.entries=true
-mfino.requires.name.when.money.transfer.to.unregistered=true
+mfino.netting.ledger.entries=false
 mfino.email.verification.subject=Email Verification
 mfino.email.verification.message=To confirm email, click link $(AppURL)/emailVerification.htm?subscriberID=$(subscriberID)&email=$(email)
+mfino.use.hsm=false
+mfino.use.hashed.pin=false
 mfino.use.rsa=false
-mfino.kycupgrade.ftp.server=ftp.mfino.com
-mfino.kycupgrade.ftp.port=21
-mfino.kycupgrade.ftp.user=qa
-mfino.kycupgrade.ftp.password=qa@350
-mfino.kycupgrade.ftp.download.filepath=/BSIM/kycupgrade.csv
-mfino.kycupgrade.notify.email=bala.s@mfino.com
+mfino.requires.name.when.money.transfer.to.unregistered=false
+mfino.kycupgrade.ftp.server=10.16.105.241
+mfino.kycupgrade.ftp.port=22
+mfino.kycupgrade.ftp.user=root
+mfino.kycupgrade.ftp.password=d0ntf0rg3t
+mfino.kycupgrade.ftp.download.filepath=/home/mfinance/Hub_Kyc_data/kycupgrade.csv
+mfino.kycupgrade.notify.email=ajay.kothuri@rand-ind.com,leo.himawan@mobipay.co.id
 mfino.kycupgrade.email.subject=kyc upgrade email
 mfino.kycupgrade.email.message=success
 #in for indonesia format, us for general format
-mfino.currency.format.locale=in
-mfino.requires.successful.transactions.in.emoney.history=false
-mfino.pdf.history.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights reserved
-mfino.email.pdf.history.subject=Smartfren Uangku Electronic Statement from $(FromDate) to $(ToDate)
-mfino.email.pdf.history.body=Terima kasih Anda telah menggunakan Uangku.\n\nTerlampir dokumen riwayat transaksi yang Anda minta. Gunakan PIN Uangku Anda untuk membuka dokumen ini.\nPastikan Anda memiliki program Adobe Acrobat Reader minimal versi 6.0 pada komputer atau handphone Anda.\n\nINFO PENTING:\n\n1. PT Smartfren Telecom Tbk ("Smartfren") tidak berkewajiban dan bertanggung jawab untuk meneliti dan menyelidiki keabsahan atau kewenangan serta ketepatan penerimaan Electronic Statement.\n\n2. Penggunaan Electronic Statement merupakan tanggung jawab pengguna UANGKU sepenuhnya dan Smartfren tidak bertanggung jawab atas segala risiko dan akibat sehubungan dengan penggunaan Electronic Statement oleh pengguna UANGKU.\n\n3. Jika Anda bukan pengguna UANGKU yang namanya tercantum di atas, mohon Anda tidak menggunakan, memanfaatkan, menyebarkan, mendistribusikan atau menggandakan email ini beserta seluruh lampirannya.\n\n4. Apabila Anda membutuhkan informasi lebih lanjut mengenai Electronic Statement silakan mengirimkan email ke help@uangku.co.id.
+mfino.currency.format.locale=us
+mfino.requires.successful.transactions.in.emoney.history=true
+mfino.pdf.history.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights Reserved
+mfino.email.pdf.history.subject=Uangku Electronic Statement from $(FromDate) to $(ToDate)
+mfino.email.pdf.history.body=Terima kasih Anda telah menggunakan Uangku.\n\nTerlampir dokumen riwayat transaksi yang Anda minta. Gunakan PIN Uangku Anda untuk membuka dokumen ini.\n\nPastikan Anda memiliki program Adobe Acrobat Reader minimal versi 6.0 pada komputer atau handphone Anda.\n\n\nINFO PENTING:\n\n1. PT Smartfren Telecom Tbk ("Smartfren") tidak berkewajiban dan bertanggung jawab untuk meneliti dan menyelidiki keabsahan atau kewenangan serta ketepatan penerimaan Electronic Statement.\n\n2. Penggunaan Electronic Statement merupakan tanggung jawab pengguna UANGKU sepenuhnya dan Smartfren tidak bertanggung jawab atas segala risiko dan akibat sehubungan dengan penggunaan Electronic Statement oleh pengguna UANGKU.\n\n3. Jika Anda bukan pengguna UANGKU yang namanya tercantum di atas, mohon Anda tidak menggunakan, memanfaatkan, menyebarkan, mendistribusikan atau menggandakan email ini beserta seluruh lampirannya.\n\n4. Apabila Anda membutuhkan informasi lebih lanjut mengenai Electronic Statement silakan mengirimkan email ke help@uangku.co.id.
 mfino.transaction.history.pdf.datetime.format=dd/MM/yyyy
-mfino.report.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights reserved
+mfino.report.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights Reserved
 promo.image.path=images/promoImage.png
 mfino.transaction.datetime.format=dd/MM/yy HH:mm
 #Below properties are used by Report module
-reportsInputDir=/home/mfinance/mfino_install/tomcat/Reports/WEB-INF/resources/reports
-scheduledReportsOutputDir=/home/mfinance/mfino_install/reports/dailyReports
+reportsInputDir=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/resources/reports
+scheduledReportsOutputDir=/home/mfinance/mfino_install/uangku-reports
 #otherReportsOutputDir=/home/mfinance/mfino_install/reports
-common.report.properties.filepath=/home/mfinance/mfino_install/tomcat/Reports/WEB-INF/classes/CommonReportProperties.json
-email.recipient.list=test@rand-ind.com
+common.report.properties.filepath=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/classes/CommonReportProperties.json
+email.recipient.list=ajay.kothuri@rand-ind.com,steven.shih@mobipay.co.id,prasad.kolachana@rand-ind.com,reza.pratama@mobipay.co.id
 dateFormatInReportFileNames=yyyyMMdd
