--- a/Core/settings/smart/quartz.properties
+++ b/Core/settings/smart/quartz.properties
@@ -33,7 +33,7 @@ org.quartz.jobStore.isClustered: false
 #============================================================================
 
 org.quartz.dataSource.myDS.driver: com.mysql.jdbc.Driver
-org.quartz.dataSource.myDS.URL: jdbc:mysql://mfinodbserver:3306/mfino
-org.quartz.dataSource.myDS.user: mfino
-org.quartz.dataSource.myDS.password: mFino260
+org.quartz.dataSource.myDS.URL: jdbc:mysql://mfinodbserver:3306/uangku
+org.quartz.dataSource.myDS.user: uangku
+org.quartz.dataSource.myDS.password: uangku30
 org.quartz.dataSource.myDS.maxConnections: 10
