--- a/MfinoCoreEngine/mfino_conf/mce.properties
+++ b/MfinoCoreEngine/mfino_conf/mce.properties
@@ -8,12 +8,15 @@ jms.brokerURL.port=61616
 #
 # mce_notification_configuration.xml
 #
-smsServerLink.uri.user=mfino
-smsServerLink.uri.password=ENC(bP9tysN6M3457MJ18e3zfg==)
-smsServerLink.uri.host=localhost
-smsServerLink.uri.port=16255
-smsServerLink.uri=smpp://mfino@localhost:16255?password=mfino
-smsConf.from=Zenith MFS
+#smsServerLink.uri.user=User2
+#smsServerLink.uri.password=Pass2
+smsServerLink.uri.user=Msoc02
+smsServerLink.uri.password=Ms123
+smsServerLink.uri.host=10.17.91.190
+#smsServerLink.uri.host=10.16.105.10
+smsServerLink.uri.port=3200
+#smsServerLink.uri.port=3300
+smsConf.from=865
 #
 # Bank configuration
 #
@@ -21,13 +24,13 @@ offline.bank=false
 #
 # email configuration
 #
-mfino.mail.server=smtp.gmail.com
-mfino.mail.server.auth_name=donotreply.mfino@gmail.com
-mfino.mail.server.auth_password=donotreplymFino260
-mfino.mail.server.from_name=staging.mfino.com dist
-mfino.mail.server.port=465
+mfino.mail.server=mail.uangku.co.id
+mfino.mail.server.auth_name=statement@uangku.co.id
+mfino.mail.server.auth_password=uangkusf
+mfino.mail.server.from_name=statement@uangku.co.id
+mfino.mail.server.port=587
 mfino.mail.server.require_auth=true
-mfino.mail.server.require_ssl=true
+mfino.mail.server.require_ssl=false
 #
 # FixRoute.xml
 #
@@ -90,7 +93,7 @@ ibtWebService.address.port=8080
 # this mapping files has the mapping between routing code of the bank and the queue where the bank request should go.
 # this mapping file should also have the entry for emoney to bank with emoney routing code being 9999
 #
-mce.bctoqmappingfile=G:/mfino_code/main/MfinoCoreEngine/mfino_conf/bc2qmap.cfg
+mce.bctoqmappingfile=/home/mfinance/mfino_install/fuse-esb-7.0.2.fuse-097/mfino_conf/bc2qmap.cfg
 #
 # sms configuration.xml
 #
@@ -105,14 +108,14 @@ BlackBoxWebService.url=http://localhost:8080/GTBlackBoxWS/services/BlackBoxServi
 # The channel number is set in ChannelCode header of In of an Exchange.
 # The requesting channel's out queue is retrieved from the below file.
 #
-mce.cashin.channeltoqmappingfile=D:/apache-servicemix-4.4.1-fuse-01-13/mfino_conf/P2.properties
+mce.cashin.channeltoqmappingfile=/home/mfinance/mfino_install/fuse-esb-7.0.2.fuse-097/mfino_conf/cashinfrontendmap.cfg
 #
 # mce_integration_cashout
 # Route cashout integration's response to the transaction requesting channel's out queue.
 # The channel number is set in ChannelCode header of In of an Exchange.
 # The requesting channel's out queue is retrieved from the below file.
 #
-mce.cashout.channeltoqmappingfile=D:/apache-servicemix-4.4.1-fuse-01-13/mfino_conf/P2.properties
+mce.cashout.channeltoqmappingfile=/home/mfinance/mfino_install/fuse-esb-7.0.2.fuse-097/mfino_conf/cashoutfrontendmap.cfg
 
 #
 #Timeout for transaction. This property is used to set the expiry time for transaction
@@ -225,7 +228,7 @@ billpay.integration.gateway.port=7634
 #
 #mce_bsm_iso_configuration.xml
 #
-mfino.smart.bsim.iso8583.keystorepath=C:/
+mfino.smart.bsim.iso8583.keystorepath=/home/mfinance/mfino_install/fuse-esb-7.0.2.fuse-097/mfino_conf/
 #
 #nibss_inter_emoney_transfer_configuration.xml for fortis
 #
@@ -305,9 +308,9 @@ hsm.thales.zone.private.key = AD09EC7F60F4AD42
 hsm.thales.min.pin.length = 04  
 hsm.thales.pin.encryption.enabled = true
 hsm.thales.keyschemetag=
-hsm.thales.encrypted.component1=UF319B0EAB09532A4381295EC865A4604
-hsm.thales.encrypted.component2=UCCCF7EB7945F9989CB88A78F88030A0F
-hsm.thales.encrypted.component3=U6506A69C3833C8CE9B48030EE38D89FC
+hsm.thales.encrypted.component1=UF319B0EAB09532A4381295EC865A4604khgf
+hsm.thales.encrypted.component2=UCCCF7EB7945F9989CB88A78F88030A0Fjgfv
+hsm.thales.encrypted.component3=U6506A69C3833C8CE9B48030EE38D89FC,khjb
 hsm.thales.keytype=000
 hsm.thales.keyschemelmk=U
 
