Modified to set up the new SMS url for Uangku

--- a/MfinoCoreEngine/mfino_conf/mce.properties
+++ b/MfinoCoreEngine/mfino_conf/mce.properties
@@ -322,3 +322,11 @@ bayar_api_key=1D02640903DF5E9126EDB9FC46C6FB70
 bayar_output=json
 #Notation for Timer 1h5m5s  (h for hour, m for minute, s for second)
 bayar_txn_pending_clear_timer=1h
+#
+#SMS HTTP URL
+#
+sms.http.url=https://202.70.62.44/UAT/SMSProxyCharged.php
+sms.shortCode=628811214550
+sms.apiToken=5e0491add86814c6e586b600093473e35e043fb5
+sms.partnerID=
+sms.intPrefixCode=01033
