--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -24,10 +24,11 @@
 
 	<modules>
 		<module>HubConfiguration</module>
-		<module>HubMocks</module>
+		<!--module>HubMocks</module-->
 		<module>BayarBillPayments</module>
 		<module>FlashizISO8583</module>
 		<module>FlashizBillPayment</module>
+		<module>HubSMS</module>
 		<!--<module>XMLRPCDefinitions</module>-->
     </modules>	
 	
