Enhancement #409: New Biller (BSM) integration for Uangku

--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -26,6 +26,7 @@
 		<module>HubConfiguration</module>
 		<!--module>HubMocks</module-->
 		<module>BayarBillPayments</module>
+		<module>BSMUangkuBillPayments</module>
 		<module>FlashizISO8583</module>
 		<module>FlashizBillPayment</module>
 		<module>HubSMS</module>
