https://project.dimo.co.id/issues/362 Bayar.Net BillPayments module - Issues Removed unused code moving the error message as configurable to mce.properties

--- a/MfinoCoreEngine/mfino_conf/mce.properties
+++ b/MfinoCoreEngine/mfino_conf/mce.properties
@@ -322,6 +322,7 @@ bayar_api_key=1D02640903DF5E9126EDB9FC46C6FB70
 bayar_output=json
 #Notation for Timer 1h5m5s  (h for hour, m for minute, s for second)
 bayar_txn_pending_clear_timer=1h
+bayar_bank_web_error_message=No connection. Retry after sometime.
 #
 #SMS HTTP URL
 #
