New Uangku InterBank Flow
Requirement

1. User provides Amount, Bank code, account number (service:wallet, txn name: inter bank transfer, pocket id: 1)
2. MFS server do internal validation (subscriber validation, pocket validation limits check)
3. MFS server will do Inquiry to UMG (ISO)
   DE#18: 6099
   DE#102:Emoney card pan
   DE#103:Destination account number (entered in Mobile app)
   
4. If inquiry success then parse DE#48 for account name and other details. And return inquiry success to Mobile App along with account details.
5. If inquiry fail then return inquiry fail to Mobile App.

6. After subscriber confirm the transaction, First transfer the money from Subscriber E-money pocket to Partner Suspense pocket (This partner will be calculated from System parameter: interbank.partner.mdn).
7. Send Confirmation to UMG (ISO)
8. If success then transfer money from partner suspense pocket to partner incoming pocket. And return Success to Mobile App along with account details..
9. If fail then transfer money from partner suspense pocket to Source subscriber E-money pocket and return Fail to Mobile app.

Tested with BSM ISO Mock in SmartProject

Reviewed by Bala

--- a/Hub/pom.xml
+++ b/Hub/pom.xml
@@ -30,6 +30,7 @@
 		<module>FlashizISO8583</module>
 		<module>FlashizBillPayment</module>
 		<module>HubSMS</module>
+		<module>UangkuInterBank</module>
 		<!--<module>XMLRPCDefinitions</module>-->
     </modules>	
 	
