Redmine TT #437 Need to add scheduled service call for Flashiz transaction status check
The ISO will be the same as the current FLASHiZ Payment Acknowledgment to Middleware, except that the processing code (DE 3) is 510000.
Based on DE 37 (rrn) + DE 33 (bank code) + DE 48 (userkey) +DE 61 (invoice id) advice is success or not which will be returned in de-39.

Reviewed by Bala

--- a/MfinoCoreEngine/mfino_conf/mce.properties
+++ b/MfinoCoreEngine/mfino_conf/mce.properties
@@ -331,3 +331,5 @@ sms.shortCode=628811214550
 sms.apiToken=5e0491add86814c6e586b600093473e35e043fb5
 sms.partnerID=
 sms.intPrefixCode=01033
+# Pending Resolve Timer for flashiz
+flashiz_pending_fetch_time=3600000
