Modified to resolve the following issue.
com.mysql.jdbc.exceptions.jdbc4.CommunicationsException: The last packet successfully received from the server was 51,872,336 milliseconds ago.  The
last packet sent successfully to the server was 51,872,336 milliseconds ago. is longer than the server configured value of 'wait_timeout'. You should consider e
ither expiring and/or testing connection validity before use in your application, increasing the server configured values for client timeouts, or using the Conn
ector/J connection property 'autoReconnect=true' to avoid this problem.

--- a/Core/settings/smart/quartz.properties
+++ b/Core/settings/smart/quartz.properties
@@ -33,7 +33,8 @@ org.quartz.jobStore.isClustered: false
 #============================================================================
 
 org.quartz.dataSource.myDS.driver: com.mysql.jdbc.Driver
-org.quartz.dataSource.myDS.URL: jdbc:mysql://mfinodbserver:3306/uangku
-org.quartz.dataSource.myDS.user: uangku
-org.quartz.dataSource.myDS.password: uangku30
+org.quartz.dataSource.myDS.URL: jdbc:mysql://mfinodbserver:3306/uangku_prod_16jul2014
+org.quartz.dataSource.myDS.user: mfino
+org.quartz.dataSource.myDS.password: mFino260
 org.quartz.dataSource.myDS.maxConnections: 10
+org.quartz.dataSource.myDS.validationQuery: SELECT 1 FROM DUAL
