--- a/Core/settings/smart/database_config.properties
+++ b/Core/settings/smart/database_config.properties
@@ -6,6 +6,7 @@ mfino.dbcp.password=ENC(BV1Pld5yEn47oljN4ye/VQ==)
 mfino.dbcp.maxActive=100
 mfino.dbcp.maxIdle=10
 mfino.dbcp.initialSize=20
+mfino.dbcp.testOnBorrow=true
 mfino.dbcp.validationQuery=SELECT 1 FROM DUAL
 mfino.dbcp.removeAbandoned=true
 mfino.dbcp.removeAbandonedTimeout=300
