--- a/Web/TransactionMonitorTool/web/WEB-INF/web.xml
+++ b/Web/TransactionMonitorTool/web/WEB-INF/web.xml
@@ -129,7 +129,10 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.htm</url-pattern>
     </servlet-mapping>
-    
+    <servlet-mapping>
+        <servlet-name>dispatcher</servlet-name>
+        <url-pattern>*.jsx</url-pattern>
+    </servlet-mapping>
   	<session-config>
         <session-timeout>
             10
