--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -3,7 +3,7 @@
 Version=0.1
 mfino.backend.URL=http\://mceserver\:30013/
 mfino.backend.socket.timeout=300000
-mfino.download.row_limit=15000
+mfino.download.row_limit=200000
 mfino.hibernate.mfino.config=./hibernate.cfg.xml
 mfino.hibernate.mfino.report.config=./reporthibernate.cfg.xml
 mfino.i18n.message=/com/mfino/i18n/message/
@@ -18,7 +18,7 @@ mfino.mail.server.require_ssl=true
 mfino.notification.var.CustomerServiceShortCode=881
 mfino.pin_length=4
 mfino.upload_file_size_limit=5
-mfino.user.add.email.subject=M-Commerce System Advisories
+mfino.user.add.email.subject=M-Banking System Advisories
 mfino.user.reset_password.email.subject=M-Commerce System Advisories
 mfino.email.signature=M-Commerce System Admin
 mfino.email.additional.message=
@@ -33,7 +33,7 @@ mfino.alert.pending_transaction.mail_1=support@mfino.com
 mfino.alert.pending_transaction.mail_2=support@mfino.com
 mfino.alert.pending_transaction.mail_3=support@mfino.com
 mfino.currencycodes=360,840
-mfino.currencyNames=NGN,USD
+mfino.currencyNames=IDR,USD
 mfino.partner.registration.email=Dear $(tradename) \n\n You have been registered as a $(partnerType) Partner.\n Here are the login details:\n username: $(username)\n password: $(password)
 mfino.bulkupload.subscriber.kyclevel=3
 # Notification Method value : 1->SMS, 2->Email, 4->Web, 8->WebService, 16->BankChannel
@@ -59,25 +59,16 @@ mfino.local_timezone=Asia/Jakarta
 mfino.allow.user.concurrent.logins=false
 report.productname=Mobile Money
 mfino.otp.onintialized=true
-mfino.emoney.pocket.required=true
+mfino.emoney.pocket.required=false
 mfino.include.partner.slc=false
-mfino.netting.ledger.entries=true
+mfino.netting.ledger.entries=false
 mfino.use.hsm=true
 mfino.use.hashed.pin=true
-mfino.requires.name.when.money.transfer.to.unregistered=false
-mfino.email.verification.subject=Email Verification
-mfino.email.verification.message=To confirm email, click link $(AppURL)/emailVerification.htm?subscriberID=$(subscriberID)&email=$(email)
 mfino.transaction.datetime.format=ddMMyyHHmmss
 mfino.use.rsa=true
 mfino.reactivation.required=false
-mfino.kycupgrade.ftp.server=ftp.mfino.com
-mfino.kycupgrade.ftp.port=21
-mfino.kycupgrade.ftp.user=qa
-mfino.kycupgrade.ftp.password=qa@350
-mfino.kycupgrade.ftp.download.filepath=/BSIM/kycupgrade.csv
-mfino.kycupgrade.notify.email=bala.s@mfino.com
-mfino.kycupgrade.email.subject=kyc upgrade email
-mfino.kycupgrade.email.message=success
 #in for indonesia format, us for general format
 mfino.currency.format.locale=in
 mfino.use.real.hsm=true 
+mfino.atm.request.timeout=50000
+mfino.send.otp.before.approval=false
