Modified the Copy to Build folder batch file to remove the Flashiz binaries and configs for Simobi Fixed the null pointer issue when there are no online reports Added the report properties to mfino.properties of Simobi profile

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -50,8 +50,8 @@ mfino.otpexpirationtime=24
 mfino.otpmail.subject=OTP mail
 mfino.application.url=http://localhost:8080/AdminApplication
 mfino.olap.url=http://olapserver:8080/saiku
-mfino.report.url=http://localhost:8080/ReportScheduler
-mfino.report.directory=D:\\Report
+mfino.report.url=http://localhost:8080/Reports
+mfino.report.directory=H:\\Report
 mfino.openoffice.port=8100
 mfino.bulktransfer.approver.notify.subject=Bulk Transfer Request
 mfino.bulktransfer.approver.notify.message=Bulk Transfer Request for approval
@@ -67,8 +67,14 @@ mfino.use.hashed.pin=true
 mfino.transaction.datetime.format=ddMMyyHHmmss
 mfino.use.rsa=true
 mfino.reactivation.required=false
-#in for indonesia format, us for general format
+#Use 'in' for indonesia format, 'us' for general format
 mfino.currency.format.locale=in
 mfino.use.real.hsm=true 
 mfino.atm.request.timeout=50000
 mfino.send.otp.before.approval=false
+mfino.report.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights Reserved
+reportsInputDir=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/resources/reports
+scheduledReportsOutputDir=/home/mfinance/mfino_install/uangku-reports
+common.report.properties.filepath=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/classes/CommonReportProperties.json
+email.recipient.list=test@test.com
+dateFormatInReportFileNames=yyyyMMdd
