Added dateFormatInReportQuery in mfino.properties

--- a/Core/settings/smart/mfino.properties
+++ b/Core/settings/smart/mfino.properties
@@ -167,3 +167,4 @@ scheduledReportsOutputDir=/home/mfinance/mfino_install/uangku-reports
 common.report.properties.filepath=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/classes/CommonReportProperties.json
 email.recipient.list=ajay.kothuri@rand-ind.com,steven.shih@mobipay.co.id,prasad.kolachana@rand-ind.com,reza.pratama@mobipay.co.id
 dateFormatInReportFileNames=yyyyMMdd
+dateFormatInReportQuery=yyyy-MM-dd
