Added dateFormatInReportQuery in mfino.properties for smart and bsim

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -78,3 +78,5 @@ scheduledReportsOutputDir=/home/mfinance/mfino_install/uangku-reports
 common.report.properties.filepath=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/classes/CommonReportProperties.json
 email.recipient.list=test@test.com
 dateFormatInReportFileNames=yyyyMMdd
+#use yyyy-MM-dd for Mysql and use dd-MMM-yy for Oracle database
+dateFormatInReportQuery=dd-MMM-yy
