--- a/Core/settings/smart/mfino.properties
+++ b/Core/settings/smart/mfino.properties
@@ -167,4 +167,5 @@ scheduledReportsOutputDir=/home/mfinance/mfino_install/uangku-reports
 common.report.properties.filepath=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/classes/CommonReportProperties.json
 email.recipient.list=ajay.kothuri@rand-ind.com,steven.shih@mobipay.co.id,prasad.kolachana@rand-ind.com,reza.pratama@mobipay.co.id
 dateFormatInReportFileNames=yyyyMMdd
+#use yyyy-MM-dd for Mysql and use dd-MMM-yy for Oracle database
 dateFormatInReportQuery=yyyy-MM-dd
