--- a/Web/webapi/pom.xml
+++ b/Web/webapi/pom.xml
@@ -107,6 +107,8 @@
 									<includes>
 										<include>spring-datasource-beans.xml</include>
 										<include>category.bankCodes.txt</include>
+										<include>category.purchase.txt</include>
+										<include>category.payments.txt</include>
 										<include>category.postpaid.txt</include>
 										<include>category.prepaid.txt</include>
 										<include>category.postpaidPhone.txt</include>
@@ -118,6 +120,14 @@
 										<include>category.help.txt</include>
 										<include>category.upgradeAddressList.txt</include>
 										<include>category.cashoutAddressList.txt</include>
+										<include>RSAdp.dat</include>
+										<include>RSAdq.dat</include>
+										<include>RSAmod.dat</include>
+										<include>RSAp.dat</include>
+										<include>RSAprivExp.dat</include>
+										<include>RSApubExp.dat</include>
+										<include>RSAq.dat</include>
+										<include>RSAqInv.dat</include>
 									</includes>
 									<filtering>true</filtering>
 								</resource>
