Modified the Category.payments.txt, category.purchase.txt and applicationContext.xml in scheduler from BSIM production for BSIM.

--- a/Core/settings/bsim/mfino.properties
+++ b/Core/settings/bsim/mfino.properties
@@ -72,10 +72,11 @@ mfino.currency.format.locale=in
 mfino.use.real.hsm=true 
 mfino.atm.request.timeout=50000
 mfino.send.otp.before.approval=false
-mfino.report.footer=\u00a9 2014 PT Smartfren Telecom Tbk. All Rights Reserved
+mfino.report.footer=\u00a9 2014 . All Rights Reserved
 reportsInputDir=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/resources/reports
 scheduledReportsOutputDir=/home/mfinance/mfino_install/uangku-reports
 common.report.properties.filepath=/home/mfinance/mfino_install/apache-tomcat-6.0.37/webapps/Reports/WEB-INF/classes/CommonReportProperties.json
+# Seperate multiple Email ids by ','
 email.recipient.list=test@test.com
 dateFormatInReportFileNames=yyyyMMdd
 #use yyyy-MM-dd for Mysql and use dd-MMM-yy for Oracle database
