--- a/Web/Scheduler/pom.xml
+++ b/Web/Scheduler/pom.xml
@@ -273,6 +273,12 @@
 									<directory>${basedir}/../../Core/settings/${profile}</directory>
 									<includes>
 										<include>spring-datasource-beans.xml</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource>
+								<resource>
+									<directory>${basedir}/../../Core/settings/${profile}/Scheduler</directory>
+									<includes>
 										<include>applicationContext.xml</include>
 									</includes>
 									<filtering>true</filtering>
