#480 Merge revision from 2.8 BSIM New SMS integration
Tested locally and observed the sms format in log

--- a/BSIM/pom.xml
+++ b/BSIM/pom.xml
@@ -26,7 +26,8 @@
 	    <module>BSIMISO8583</module>
 		<module>BSIMConfiguration</module>
 		<module>BSIMInterBankTransfer</module>
-		<module>BSIMSMS</module>
+		<!--module>BSIMSMS</module-->
+		<module>NewBSIMSMS</module>
 		<module>BSIMBillPayment</module>
 		<module>FlashizISO8583</module>
     </modules>	
